newrelic_via_isd_v1/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nr-isd-rollout
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: nr-isd-rollout
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus_io_path: '/mgmt/prometheus'
        prometheus_io_port: '8088'    
      labels:
        app: nr-isd-rollout
    spec:
      containers:
        - name: nr-app-baseline
          image: http://quay.io/opsmxpublic/canary-issuegen:issue-canary-gen-1400
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: { duration: 60s }
        - setWeight: 90
        - pause: { duration: 60s }
