newrelic_via_isd_v1/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nr-isd-issuegen
spec:
  selector:
    app: nr-isd-rollout
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
